Revert using ::before for wiki because it was breaking the size on mobile I still don't know why but if anyone ever figures it out, please fix it

--- a/style/break.scss
+++ b/style/break.scss
@@ -39,11 +39,12 @@ $image-width: 20%;
 
 /* Fontfaces */
 h1, h2, h3, h4, h5, h6 {font-family: $header-font-family;}
-body, h3 {font-family: $body-font-family;}
+body {font-family: $body-font-family;}
 
 /* Breakpoints */
 html {font-size: $size-small;}
 h2, #search, .tag-list, .episode {
+    margin: auto;
     width: 100%;
 }
 .episode {
@@ -58,7 +59,6 @@ h2, #search, .tag-list, .episode {
 @media only screen and (min-width: $break-medium) {
     html {font-size: $size-medium;}
     h2, #search, .tag-list, .episode {
-        margin: auto;
         width: 75%;
     }
 }
